rollback: Ktor 2.0.x -> 1.6.8
Signed-off-by: SlashNephy <slashnephy@hatena.ne.jp>